# dice

./: .appveyor.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: amd64_docker.yml  amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  docker.yml  riscv64_docker_cmake.yml
Catch/: CMakeLists.txt
Dice/: CMakeLists.txt
Dice/doc/: CMakeLists.txt  coding_standards.dox  overview.dot
Dice/include/Dice/: Dice.hpp  Stat.hpp
Dice/src/: Dice.cpp  Die.cpp
Dice/test/: CMakeLists.txt
Dice/test/src/: Dice_UT.cpp  Die_UT.cpp  Face_UT.cpp  Roll_UT.cpp  Stat_UT.cpp
DiceApp/: CMakeLists.txt
DiceApp/doc/: CMakeLists.txt  Doxyfile.in  architecture.dox
ci/: Makefile  README.md
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/toolchain/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot
ci/sample/: CMakeLists.txt  main.cpp
cmake/: DiceConfig.cmake.in  cpp.cmake  doxygen.cmake  host.CMakeLists.txt
cmake/dependencies/: CMakeLists.txt
dice/: CMakeLists.txt
dice/doc/: architecture.dox  main.dox  overview.dot
dice/src/: DiceWidget.cpp  DiceWidget.hpp  main.cpp
diceapp/: CMakeLists.txt
diceapp/docs/: CMakeLists.txt  main.dox
diceapp/src/: DiceWidget.cpp
doc/: CMakeLists.txt  Doxyfile.in  main.dox
docs/: CMakeLists.txt  main.dox
libDice/: CMakeLists.txt
libDice/doc/: CMakeLists.txt  Doxyfile.in
libDice/include/Dice/: Dice.hpp  Die.hpp  Face.hpp  Roll.hpp
libDice/src/: Dice.cpp  Face.cpp  Roll.cpp  Stat.cpp
libDice/test/: CMakeLists.txt
libDice/test/src/: Dice_UT.cpp  Die_UT.cpp  Roll_UT.cpp  Stat_UT.cpp
libdice/: CMakeLists.txt
libdice/doc/: coding_standards.dox  compiling.dox  main.dox
libdice/docs/: architecture.dox  compiling.dox
libdice/include/Dice/: Die.hpp  Face.hpp  Stat.hpp
libdice/include/dice/: Dice.hpp
libdice/src/: Dice.cpp  Die.cpp  Face.cpp  Roll.cpp  Stat.cpp
libdice/test/src/: Dice_UT.cpp  Die_UT.cpp  Face_UT.cpp  Roll_UT.cpp  Stat_UT.cpp
libdice/tests/: CMakeLists.txt
libdice/tests/src/: Die_UT.cpp  Stat_UT.cpp
tools/: coverage.sh  gcovr
